--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
 	
-	<title>Dynamic Page | About</title>
+	<title>PhilosophyStars | About</title>
 	
 	<link rel='stylesheet' type='text/css' href='css/style.css' />
 	
@@ -12,7 +12,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 	
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js'></script>
     <script type='text/javascript' src='js/modernizr.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 </head>
@@ -24,13 +24,14 @@
 	<div id="page-wrap">
 
         <header>
-		  <h1>Dynamic Site</h1>
+		    <h1>PhilosophyStars</h1>
+		  <h3>Fostering the Thinkers of Today to Create a Better Tomorrow</h3>
 		
 		  <nav>
 		      <ul class="group">
 		          <li><a href="index.html">Home</a></li>
-		          <li><a href="about.html">About</a></li>
-		          <li><a href="contact.html">Contact</a></li>
+		          <li><a href="about.html">About PhilosophyStars</a></li>
+		          <li><a href="contact.html">Sign Up for the Tournament</a></li>
 		      </ul>
 		  </nav>
 		</header>
@@ -46,7 +47,7 @@
 		</section>
 		
 		<footer>
-		  &copy;2014 Andrew Ritter
+		  &copy;2014 LoveWorks
 		</footer>
 			
 	</div>
