--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
 	
-	<title>Dynamic Page | Home</title>
+	<title>PhilosophyStars | Home</title>
 	
 	<link rel='stylesheet' type='text/css' href='css/style.css' />
 	
@@ -12,7 +12,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 	
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js'></script>
     <script type='text/javascript' src='js/modernizr.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 </head>
@@ -24,13 +24,14 @@
 	<div id="page-wrap">
 
         <header>
-		  <h1>Dynamic Page</h1>
+		  <h1>PhilosophyStars</h1>
+		  <h3>Fostering the Thinkers of Today to Create a Better Tomorrow</h3>
 		
 		  <nav>
 		      <ul class="group">
 		          <li><a href="index.html">Home</a></li>
-		          <li><a href="about.html">About</a></li>
-		          <li><a href="contact.html">Contact</a></li>
+		          <li><a href="about.html">About PhilosophyStars</a></li>
+		          <li><a href="contact.html">Sign Up for the Tournament</a></li>
 		      </ul>
 		  </nav>
 		</header>
@@ -38,7 +39,8 @@
 		<section id="main-content">
 		<div id="guts">
 		
-		  <h2>Home</h2>
+			<h1>The Mind is More Powerful Than The Sword!</h1>
+		  <h2>Philosophy Stars Tournament</h2>
 		
 		  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p> 
 		
@@ -50,7 +52,7 @@
 	</div>
 	
 	<footer>
-	  &copy;2014 Andrew Ritter
+	  &copy;2014 LoveWorks
 	</footer>
 
 </body>
